Signup and login: almost ready

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.thymeleaf.cache=false
+#spring.messages.basename=ui
 
 spring.mandatory-file-encoding=UTF-8
 
 server.port=8088
-spring.data.rest.base-path=/api
+#spring.data.rest.base-path=/api
 
 #DB properties:
 spring.jpa.hibernate.ddl-auto=update
